# aelix-ai

./: .env.example  .gitignore  CHANGELOG.md  README.ko.md  README.md  RELEASING.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
.omc/specs/: pi-parity-gap-inventory.md  sprint-1-phase-1-2-critic-review.md  sprint-1-phase-1-2-spec.md  sprint-1-pi-parity-reevaluation.md  sprint-2-5-phase-1-4-spec.md  sprint-2-phase-1-3-spec.md  sprint-3a-phase-2-1-1-spec.md  sprint-3b-phase-2-1-2-spec.md  sprint-3c-phase-2-1-3-spec.md  sprint-3d-phase-2-1-4-spec.md  sprint-4a-phase-2-2-1-spec.md  sprint-4b-phase-2-2-2-spec.md  sprint-5a-phase-3-1-spec.md  sprint-5b-phase-3-2-spec.md  sprint-6a-phase-4-1-spec.md  sprint-6b-phase-4-2-spec.md  sprint-6c-phase-4-3-spec.md  sprint-6d-phase-4-4-spec.md  sprint-6e-phase-4-5-spec.md  sprint-6f-phase-4-6-spec.md  sprint-6g-phase-4-7-spec.md  sprint-6h-phase-4-8-spec.md  sprint-6h2-phase-4-9-spec.md
docs/: 00-conventions.md  01-product-vision.md  02-initial-requirements.md  03-architecture-principles.md  04-reference-projects.md  README.md
docs/assets/: dedup_frames.py  demo.tape
docs/contracts/: README.md  descriptor-envelope.schema.json  manifest.schema.json  primitives.schema.json  slot-taxonomy.schema.json
docs/decisions/: 0001-use-aelix-as-product-name.md  0002-start-with-small-runtime-kernel.md  0003-use-pi-agent-as-primary-reference.md  0004-policy-and-guardrail-as-builtin-extensions.md  0005-marketplace-multi-source-indexes.md  0006-aelix-is-a-standalone-platform.md  0007-in-process-extension-execution.md  0008-agent-loop-in-core-orchestration-in-extensions.md  0009-python-first-sdk.md  0010-trust-model-stays-source-specific.md  0011-hook-event-catalogue-v1.md  0013-message-end-observational-in-1-2.md  0014-hook-error-policy.md  0015-monorepo-layout-uv-workspaces.md  0017-full-hook-event-catalogue-v2.md  0018-message-end-replacement-reducer.md  0019-hook-error-policy-v2-pi-continue-default.md  0020-rpc-mode-multi-language-clients.md  0021-parallel-tool-execution.md  0022-session-manager-jsonl-persistence.md  0023-compaction-branch-summary.md  0024-queue-default-one-at-a-time.md  0025-f10-minimal-turn-state-snapshot.md  0026-workspace-root-pytest-layout.md  0027-asyncio-taskgroup-parallel-tools.md  0028-extension-auto-discovery-entry-points.md  0029-pi-parity-acceptance-test-harness.md  0030-hook-event-exhaustiveness-assert-never.md  0031-build-backend-hatchling.md  0032-sprint-workflow-review-parity-suggestions.md  0034-pi-reference-version-pin.md  0035-error-code-taxonomy.md  0036-loop-event-vs-harness-event-distinction.md  0037-streaming-event-union-pi-parity.md  0038-stream-simple-dispatch-shell-phase-1-boundary.md  0039-phase-2-1-strict-superset-closure.md  0040-phase-2-2-strict-superset-closure.md  0041-phase-3-1-extension-api-full-surface-closure.md  0042-built-in-coding-tools.md  0043-tool-typed-tool-call-event-variants.md  (+153 more)
docs/guides/: README.md  extension-authoring.md  getting-started.md  models-json.md  providers-and-models.md
sbom/: README.md  aelix-0.1.0b1.cdx.json
scripts/: diag_copilot_enterprise.py  generate_contracts_schemas.py  generate_sbom.py  pyright_spike.py
site/: index.html
src/aelix/: __init__.py  __main__.py
tests/: conftest.py  test_abort_cancels_in_flight_parallel.py  test_abort_event_emit.py  test_abort_lane_ab.py  test_adr0135_reasoning_state_wiring.py  test_after_provider_response_emit.py  test_agent.py  test_agent_harness.py  test_agent_harness_auth_error.py  test_agent_harness_options_placeholders.py  test_agent_loop.py  test_agent_regression.py  test_api_registry_provider_protocol.py  test_api_registry_reset.py  test_apply_stream_options_patch.py  test_auto_retry.py  test_before_provider_payload_emit.py  test_before_provider_request_emit.py  test_bootstrap_session_start.py  test_builtin_guardrail.py  test_builtin_policy.py  test_compact.py  test_context_overflow.py  test_export_html_template_concat.py  test_export_html_visual_fidelity.py  test_extension_api.py  test_extension_api_adapter.py  test_extension_api_full_surface.py  test_extension_api_wired_stubs.py  test_extension_command_context.py  test_extension_context_full_fields.py  test_extension_discovery.py  test_extension_discovery_entry_points.py  test_extension_issue5_runtime_and_trust.py  test_extension_loader.py  test_extension_login_provider.py  test_extension_runtime_actions_v2.py  test_factory_assert_session_cwd.py  test_github_copilot_completions_routing.py  test_harness_current_model.py  (+56 more)
tests/builtin/: test_bash_classifier.py  test_permission.py  test_permission_mode.py
tests/cli/: test_agent_context.py  test_api_key_auth.py  test_append_system_prompt.py  test_args.py  test_auth_guidance.py  test_auth_subcommand.py  test_config.py  test_continue_flag.py  test_copilot_base_url_enrichment.py  test_entry_router.py  test_extension_catalog.py  test_extension_discover.py  test_extension_install.py  test_extension_pins.py  test_extension_signing.py  test_file_processor.py  test_initial_message.py  test_list_models.py  test_pipe_robustness.py  test_print_mode.py  test_project_trust.py  test_register_provider_bootstrap.py  test_resume_flag.py  test_runtime_bootstrap.py  test_runtime_bootstrap_google_unhide.py  test_runtime_bootstrap_responses_unhide.py  test_session_flags.py  test_skill_loading.py  test_tool_timeout_options.py  test_truststore.py
tests/coding_agent/: test_export_html.py
tests/contracts/: __init__.py  test_contracts_schema.py
tests/core/: test_scoped_models_filter.py
tests/extensions/: test_command_dispatch.py  test_ext_ui_context.py  test_extension_runner_emit_delegate.py  test_lazy_activation.py  test_manifest_scan.py  test_manifest_v1_loader.py  test_themes_manifest.py  test_tui_widgets_manifest.py
tests/harness/: test_append_system_prompt.py  test_compact_hook_reason.py  test_context_usage.py  test_skills.py  (+22 more)
(+267 files in other folders)
