[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aelix"
version = "0.1.0"
description = "A flexible Python agent runtime and extension platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Aelix Contributors" }]
dependencies = []

[project.scripts]
aelix = "aelix.__main__:main"

[dependency-groups]
dev = [
  "pyright>=1.1.409",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = [
  "E501",  # long lines are tolerated where docstrings or URLs make them unavoidable
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # tests may use bare asserts intentionally

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
