[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aelix"
version = "0.1.0"
description = "Aelix umbrella — convenience re-exports + demo entry."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Aelix Contributors" }]
dependencies = [
  "aelix-ai",
  "aelix-agent-core",
  "aelix-coding-agent",
]

[project.scripts]
aelix = "aelix.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aelix"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
aelix-ai = { workspace = true }
aelix-agent-core = { workspace = true }
aelix-coding-agent = { workspace = true }

[dependency-groups]
dev = [
  "pyright>=1.1.409",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
include = ["src", "packages/*/src", "scripts"]
pythonVersion = "3.11"
