[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aelix"
version = "0.1.0"
description = "Aelix — a pi-faithful Python agent runtime (providers, tools, compaction, extensions, TUI)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Aelix Contributors" }]
keywords = ["ai", "agent", "llm", "tui", "cli", "coding-agent", "anthropic", "openai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Inter-package deps are pinned to the shared release version so the
# published umbrella pulls a compatible, lock-step set from PyPI. The
# `[tool.uv.sources] workspace = true` entries below are dev-only and are
# stripped from the built metadata — the published wheel uses these pins.
dependencies = [
  "aelix-ai==0.1.0",
  "aelix-agent-core==0.1.0",
  "aelix-coding-agent==0.1.0",
]

[project.urls]
Homepage = "https://github.com/handochan/aelix-ai"
Repository = "https://github.com/handochan/aelix-ai"
Issues = "https://github.com/handochan/aelix-ai/issues"

# NOTE: the `aelix` console script is intentionally NOT defined here.
# The real CLI ships from aelix-coding-agent
# (`aelix = "aelix_coding_agent.cli.entry:main_sync"`), which owns the
# `aelix` command. The demo entry in src/aelix/__main__.py remains
# reachable via `python -m aelix`.

[tool.hatch.build.targets.wheel]
packages = ["src/aelix"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
aelix-ai = { workspace = true }
aelix-agent-core = { workspace = true }
aelix-coding-agent = { workspace = true }
aelix-server = { workspace = true }

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pyright>=1.1.409",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  # Sprint 6h₁₀a: aelix-coding-agent[tui] extra libs, pulled into the dev
  # env so pyright + pytest resolve them (both ship py.typed). End users
  # still install them via the gated `[tui]` extra.
  "prompt-toolkit>=3.0,<4",
  "rich>=13.7,<15",
  # Sprint 6h₁₀c: aelix-coding-agent[images] extra libs, pulled into the dev
  # env so pyright + pytest resolve them. End users install them via the
  # gated `[images]` extra. term-image is NOT pulled in here: its latest
  # release (0.7.2) hard-caps Pillow<11, conflicting with the coding-agent's
  # Pillow>=11 core pin, so it cannot be co-resolved in this workspace. The
  # images.py graphics tier guards the term-image import (placeholder when
  # absent); rich-pixels (Pillow>=10) drives the always-available Unicode tier.
  "rich-pixels>=3.0,<4",
  "pyte>=0.8.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.pyright]
include = ["src", "packages/*/src", "scripts"]
pythonVersion = "3.11"
